# PyGamma15

./: .gitignore  README.md  index.html  style.css
minutes/: README.md  plenary-friday.md  plenary-monday.md  plenary-thursday.md  plenary-tuesday.md  plenary-wednesday.md  workshop-email-1.md  workshop-email-2.md
static/: style.css
talks/: README.md
talks/analysis-bias/: README.md
talks/analysis-classical/: README.md
talks/analysis-cube/: README.md
talks/analysis-image/: README.md
talks/analysis-spec/: README.md
talks/analysis-stats/: README.md
talks/astropy/: README.md
talks/contributing/: README.md
talks/cta/: README.md
talks/ctapipe/: README.md
talks/cube-analysis/: README.md
talks/fermi-advanced/: README.md
talks/fermi-basics/: README.md
talks/fermi1/: LAT_Analysis.ipynb  LAT_Analysis.slides.html  README.md
talks/fermi2/: README.md
talks/gamera/: README.md
talks/gammapy/: README.md
talks/hawc/: README.md
talks/hess/: README.md
talks/intro/: README.md
talks/intro-flash/: README.md
talks/intro-workshop/: README.md
talks/lightning/: .#README.md  README.md  flask.md
talks/naima/: README.md
talks/python/: README.md
talks/sherpa/: README.md
talks/threeml/: README.md
talks/veritas/: README.md
tutorials/: README.md
tutorials/analysis-stats/: README.md  Tutorial.ipynb  TutorialSolutions.ipynb  setup-check.ipynb  spectrum_chi2.ipynb  spectrum_crab_hess_2006.txt
tutorials/cmake_python_wrapper/v2/python/: CMakeLists.txt  setup.py.in
tutorials/cmake_python_wrapper/v2/python/foo/: __init__.py
(+30 files in other folders)
